# xenodex_fulfillment

./: README.md  test_paths.py
ai/: .env.example  .gitignore  pyproject.toml  requirements.txt
ai/config/data_configs/: celebrity_dataset.yaml  validation_splits.yaml  youtube_extraction.yaml
ai/config/model_configs/: di_de_detector.yaml  f_t_detector.yaml
ai/docs/design/old_mermaid/: bottleneck_decision_tree.mermaid  xenodex_baseline_validation_flowchart.mermaid
ai/docs/design/phase1/: phase1_arch.mermaid  phase1_eng.mermaid
ai/docs/design/phase2/: xenodex_mlops_file_structure_phase2.txt
ai/src/xenodex/: __init__.py
ai/tests/: conftest.py
apis/behavior_signals/: requirements.txt
apis/reports/: 45min_SPEAKER_01_analysis.txt  45min_SPEAKER_03_analysis.txt  45min_SPEAKER_04_analysis.txt  45min_SPEAKER_06_analysis.txt  45min_SPEAKER_08_analysis.txt  45min_analysis_report.txt
process_data/config/: config.yaml
process_data/downloaders/: download_drive_files_from_html.py  download_large_drive_file_direct.py  download_large_drive_files.py  download_small_drive_files.py
process_data/extractors/: run_extract_links.py
process_data/processors/: data_processing.py
process_data/workflows/: download_all_media.py  process_unprocessed_rows.py  run_drive_downloads_async.py  run_youtube_downloads_async.py  simple_workflow.py
xenodex_fulfillment/: ADDING_NEW_APIS.md  ARCHITECTURE.md  QUICK_REFERENCE.md
xenodex_fulfillment/ai/: Makefile  README.md  docker-compose.yml
xenodx_fulfillment/: MIGRATION.md  README.md  run_pipeline.py  test_performance.py
(+92 files in other folders)
